// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDisplayMode should render 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    className="dropdown"
    style={undefined}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href="#"
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-table"
        />
      </svg>
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-table"
            />
          </svg>
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-expanded"
            />
          </svg>
          Expanded
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`SelectDisplayMode should render id if provided 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    className="dropdown"
    style={undefined}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href="#"
      id="toolbar-display-mode"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-table"
        />
      </svg>
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby="toolbar-display-mode"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id="toolbar-display-mode-table"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-table"
            />
          </svg>
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id="toolbar-display-mode-large"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-expanded"
            />
          </svg>
          Expanded
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`SelectDisplayMode should render with displayMode = large 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    className="dropdown"
    style={undefined}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href="#"
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-expanded"
        />
      </svg>
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-table"
            />
          </svg>
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-expanded"
            />
          </svg>
          Expanded
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`SelectDisplayMode should render with displayMode = table 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    className="dropdown"
    style={undefined}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href="#"
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-table"
        />
      </svg>
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-table"
            />
          </svg>
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-expanded"
            />
          </svg>
          Expanded
        </a>
      </li>
    </ul>
  </li>
</ul>
`;
